<resources>
    <string name="app_name">YourHealth</string>
    <string name="my_app_id">yourhealth-rrqjp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_logo">App Logo</string>
    <string name="email_header">Email</string>
    <string name="password_header">Password</string>
    <string name="username_header">Name</string>
    <string name="title_activity_workout_page">WorkoutPage</string>
    <string name="tab_exercises">Exercises</string>
    <string name="tab_graphs">Graphs</string>
    <string name="tab_history">History</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="Username_title"><u>User name:</u> </string>
    <string name="Email_title"><u>Email:</u> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_disc">Track your calories, and watch your number of steps for today!
        The recommended number of steps for an adult is about 10,000 steps a day.</string>
    <string name="my_profile"><u>My Profile</u></string>
    <string name="update"><u>Update</u></string>
</resources>