<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/blue_gradient_design"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/my_profile"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/profile_disc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:background="@color/silver_grey"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:text="@string/Username_title"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/username_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Email_title"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yarden@gmail.com"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_run"
        android:layout_marginVertical="250dp"/>

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/blue_circle"
        android:layout_marginVertical="220dp"/>

    <TextView
        android:id="@+id/StepsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2052"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:layout_marginVertical="295dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="380dp"
        android:text="Steps"
        android:textColor="@color/black" />

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/teal_circle"
        android:layout_marginVertical="470dp"/>

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_fire"
        android:layout_marginVertical="505dp"/>

    <TextView
        android:id="@+id/CaloriesCount"
        android:layout_width="wrap_content"
        android:layout_height="69dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="545dp"
        android:text="1030"
        android:textColor="@color/black"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="630dp"
        android:text="Calories"
        android:textColor="@color/black" />

</FrameLayout>